<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/day_before"
        android:icon="@drawable/baseline_navigate_before_24"
        android:title="datePicker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/today_Bullet"
        android:icon="@drawable/baseline_today_24"
        android:title="datePicker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/next_day"
        android:icon="@drawable/baseline_navigate_next_24"
        android:title="datePicker"
        app:showAsAction="ifRoom" />

</menu>