<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eae7d9"
    tools:context=".DayPackage.DayFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:background="@color/md_theme_light_surface"
                android:elevation="4dp"
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/day_top_app_bar"
                />
            <!--        app:navigationIcon="@drawable/ic_baseline_dashboard_24" -->


        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab_new_bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="New bullet"
            app:icon="@drawable/ic_baseline_expand_circle_down_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_notes_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/small_fab_event"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_event_note_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_note"
            app:layout_constraintEnd_toEndOf="@id/fab_note"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/small_fab_task"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/baseline_check_box_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/small_fab_event"
            app:layout_constraintEnd_toEndOf="@id/fab_note" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintBottom_toTopOf="@+id/small_fab_task"
            app:layout_constraintEnd_toEndOf="@id/fab_note"
            android:id="@+id/small_fab_daily_highlight"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/baseline_star_24"
            android:visibility="gone"
            style="?attr/floatingActionButtonSmallStyle"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBullets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/bullets_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>